builds/tests/313/data/attachments/800c03c67828da82.txt
2026-06-11 03:10:59,924 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-11 03:10:59,924 INFO     yoyo.migrations —  - applying step 0
2026-06-11 03:10:59,924 INFO     yoyo.migrations —  - applying step 1
2026-06-11 03:10:59,924 INFO     yoyo.migrations —  - applying step 2
2026-06-11 03:10:59,925 INFO     yoyo.migrations —  - applying step 3
2026-06-11 03:10:59,925 INFO     yoyo.migrations —  - applying step 4
2026-06-11 03:10:59,925 INFO     yoyo.migrations —  - applying step 5
2026-06-11 03:10:59,925 INFO     yoyo.migrations —  - applying step 6
2026-06-11 03:10:59,925 INFO     yoyo.migrations —  - applying step 7
2026-06-11 03:10:59,925 INFO     yoyo.migrations —  - applying step 8
2026-06-11 03:10:59,926 INFO     yoyo.migrations —  - applying step 9
2026-06-11 03:10:59,926 INFO     yoyo.migrations —  - applying step 10
2026-06-11 03:10:59,926 INFO     yoyo.migrations —  - applying step 11
2026-06-11 03:10:59,926 INFO     yoyo.migrations —  - applying step 12
2026-06-11 03:10:59,926 INFO     yoyo.migrations —  - applying step 13
2026-06-11 03:10:59,927 INFO     yoyo.migrations —  - applying step 14
2026-06-11 03:10:59,928 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-11 03:10:59,929 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-11 03:10:59,930 INFO     yoyo.migrations —  - applying step 0
2026-06-11 03:10:59,930 INFO     yoyo.migrations —  - applying step 1
2026-06-11 03:10:59,931 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-11 03:10:59,932 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-11 03:10:59,932 INFO     yoyo.migrations —  - applying step 0
2026-06-11 03:10:59,933 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-11 03:10:59,934 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-11 03:10:59,934 INFO     yoyo.migrations —  - applying step 0
2026-06-11 03:10:59,935 INFO     yoyo.migrations —  - applying step 1
2026-06-11 03:10:59,935 INFO     yoyo.migrations —  - applying step 2
2026-06-11 03:10:59,935 INFO     yoyo.migrations —  - applying step 3
2026-06-11 03:10:59,935 INFO     yoyo.migrations —  - applying step 4
2026-06-11 03:10:59,935 INFO     yoyo.migrations —  - applying step 5
2026-06-11 03:10:59,936 INFO     yoyo.migrations —  - applying step 6
2026-06-11 03:10:59,936 INFO     yoyo.migrations —  - applying step 7
2026-06-11 03:10:59,936 INFO     yoyo.migrations —  - applying step 8
2026-06-11 03:10:59,936 INFO     yoyo.migrations —  - applying step 9
2026-06-11 03:10:59,937 INFO     yoyo.migrations —  - applying step 10
2026-06-11 03:10:59,937 INFO     yoyo.migrations —  - applying step 11
2026-06-11 03:10:59,937 INFO     yoyo.migrations —  - applying step 12
2026-06-11 03:10:59,937 INFO     yoyo.migrations —  - applying step 13
2026-06-11 03:10:59,938 INFO     yoyo.migrations —  - applying step 14
2026-06-11 03:10:59,938 INFO     yoyo.migrations —  - applying step 15
2026-06-11 03:10:59,938 INFO     yoyo.migrations —  - applying step 16
2026-06-11 03:10:59,939 INFO     yoyo.migrations —  - applying step 17
2026-06-11 03:10:59,939 INFO     yoyo.migrations —  - applying step 18
2026-06-11 03:10:59,939 INFO     yoyo.migrations —  - applying step 19
2026-06-11 03:10:59,940 INFO     yoyo.migrations —  - applying step 20
2026-06-11 03:10:59,940 INFO     yoyo.migrations —  - applying step 21
2026-06-11 03:10:59,940 INFO     yoyo.migrations —  - applying step 22
2026-06-11 03:10:59,942 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-11 03:10:59,942 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-11 03:10:59,943 INFO     yoyo.migrations —  - applying step 0
2026-06-11 03:10:59,943 INFO     yoyo.migrations —  - applying step 1
2026-06-11 03:10:59,943 INFO     yoyo.migrations —  - applying step 2
2026-06-11 03:10:59,943 INFO     yoyo.migrations —  - applying step 3
2026-06-11 03:10:59,945 INFO     yoyo.migrations —  - applying step 4
2026-06-11 03:10:59,945 INFO     yoyo.migrations —  - applying step 5
2026-06-11 03:10:59,945 INFO     yoyo.migrations —  - applying step 6
2026-06-11 03:10:59,945 INFO     yoyo.migrations —  - applying step 7
2026-06-11 03:10:59,945 INFO     yoyo.migrations —  - applying step 8
2026-06-11 03:10:59,946 INFO     yoyo.migrations —  - applying step 9
2026-06-11 03:10:59,946 INFO     yoyo.migrations —  - applying step 10
2026-06-11 03:10:59,946 INFO     yoyo.migrations —  - applying step 11
2026-06-11 03:10:59,946 INFO     yoyo.migrations —  - applying step 12
2026-06-11 03:10:59,946 INFO     yoyo.migrations —  - applying step 13
2026-06-11 03:10:59,946 INFO     yoyo.migrations —  - applying step 14
2026-06-11 03:10:59,947 INFO     yoyo.migrations —  - applying step 15
2026-06-11 03:10:59,947 INFO     yoyo.migrations —  - applying step 16
2026-06-11 03:10:59,947 INFO     yoyo.migrations —  - applying step 17
2026-06-11 03:10:59,947 INFO     yoyo.migrations —  - applying step 18
2026-06-11 03:10:59,947 INFO     yoyo.migrations —  - applying step 19
2026-06-11 03:10:59,947 INFO     yoyo.migrations —  - applying step 20
2026-06-11 03:10:59,947 INFO     yoyo.migrations —  - applying step 21
2026-06-11 03:10:59,947 INFO     yoyo.migrations —  - applying step 22
2026-06-11 03:10:59,948 INFO     yoyo.migrations —  - applying step 23
2026-06-11 03:10:59,948 INFO     yoyo.migrations —  - applying step 24
2026-06-11 03:10:59,948 INFO     yoyo.migrations —  - applying step 25
2026-06-11 03:10:59,948 INFO     yoyo.migrations —  - applying step 26
2026-06-11 03:10:59,948 INFO     yoyo.migrations —  - applying step 27
2026-06-11 03:10:59,948 INFO     yoyo.migrations —  - applying step 28
2026-06-11 03:10:59,949 INFO     yoyo.migrations —  - applying step 29
2026-06-11 03:10:59,949 INFO     yoyo.migrations —  - applying step 30
2026-06-11 03:10:59,949 INFO     yoyo.migrations —  - applying step 31
2026-06-11 03:10:59,949 INFO     yoyo.migrations —  - applying step 32
2026-06-11 03:10:59,949 INFO     yoyo.migrations —  - applying step 33
2026-06-11 03:10:59,950 INFO     yoyo.migrations —  - applying step 34
2026-06-11 03:10:59,952 INFO     yoyo.migrations —  - applying step 35
2026-06-11 03:10:59,952 INFO     yoyo.migrations —  - applying step 36
2026-06-11 03:10:59,952 INFO     yoyo.migrations —  - applying step 37
2026-06-11 03:10:59,952 INFO     yoyo.migrations —  - applying step 38
2026-06-11 03:10:59,954 INFO     yoyo.migrations —  - applying step 39
2026-06-11 03:10:59,955 INFO     yoyo.migrations —  - applying step 40
2026-06-11 03:10:59,957 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-11 03:10:59,963 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-11 03:10:59,964 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 222, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 513, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
